# B-bot

./: .env.dev  .env.prod  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  log  pyproject.toml  requirements.txt  requirements1.txt  test.json  test.py
b_bot/plugins/: anime.py  cyberchef.py  drama.py  forward.py  hot_reload.py  img_history.py  lottery.py  mc.py  org_welcome.py  pic_gen.py  qa.py  reply.py  txt2img.py  upload_monitor.py  weather.py  welcome.py  xml_msg.py
b_bot/plugins/ctf/: __init__.py  ctf_api.py
b_bot/plugins/manager/: __init__.py
b_bot/plugins/resources/: config.json  qa.json
b_bot/plugins/schedulenotice/: __init__.py
b_bot/plugins/schedulenotice/plugins/: data.py  test.json
b_bot/plugins/shodan/: __init__.py  config.py  shodan_monitor.py
b_bot/plugins/temperature/: __init__.py  encrypt.js  report.py
b_bot/plugins/test1/: test.py
data/: config.json  majorCode.json  qa.json  test.html  welcome.json
data/img_history/: md5sum.json
data/schedules/: 76054204.html
