[tool.poetry]
name = "B-bot"
version = "0.1.0"
description = "B-bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_petpet", "nonebot_plugin_directlinker", "nonebot_plugin_eventdone", "nonebot_plugin_kawaii_robot", "nonebot_plugin_repeater", "nonebot_plugin_emojimix", "nonebot_plugin_covid19_news", "nonebot_plugin_game_collection", "nonebot_plugin_qrcode", "nonebot_plugin_imageutils"]
plugin_dirs = ["b_bot/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
